--- a/client/views/elections/electionsChoice.html
+++ b/client/views/elections/electionsChoice.html
@@ -1,4 +1,4 @@
-<template name="electionsCandidate">
+<template name="electionsChoice">
   {{name}}
   <img src="{{image}}" alt="{{name}}" />
   {{description}}
