--- a/client/views/elections/electionsItem.html
+++ b/client/views/elections/electionsItem.html
@@ -1,7 +1,7 @@
 <template name="electionItem">
 {{title}}
 {{description}}
-{{#each candidates}}
-  {{> electionsCandidate}}
+{{#each questions}}
+  {{> electionsQuestions}}
 {{/each}}
 </template>
