--- a/client/views/elections/electionsAdminList.html
+++ b/client/views/elections/electionsAdminList.html
@@ -3,7 +3,7 @@
     {{name}}
     {{#each questions}}
       {{name}}
-      {{each choices}}
+      {{#each choices}}
         {{name}}
       {{/each}}
     {{/each}}
