--- a/client/views/groups/groupsItem.html
+++ b/client/views/groups/groupsItem.html
@@ -1,5 +1,5 @@
 <template name="groupsItem">
-  {{name}}
-  {{admins}}
-  Users: {{usersCount}}
+  Name: {{name}}<br/>
+  Admins: {{admins}}<br />
+  Users: {{usersCount}} <br/>
 </template>
