--- a/client/views/groups/groupsList.html
+++ b/client/views/groups/groupsList.html
@@ -1,6 +1,9 @@
 <template name="groupsList">
+  <br/>
+  Groups: <br/>
   {{#each groups}}
-    {{> groupsItem}}
+    Group Item: <br/>
+    {{> groupsItem}}<br/>
   {{/each}}
   <a href="#">Create new group</a>
 </template>
