--- a/client/views/includes/admin.html
+++ b/client/views/includes/admin.html
@@ -1,9 +1,10 @@
 <template name="admin">
-  Welcome to the admin panel. From here you can create, delete, and modify user groups and elections.
-
-  Elections:
-  {{> electionsAdminList }}
-
-  User Groups:
-  {{> groupsList }}
+  Welcome to the admin panel. From here you can create, delete, and modify user groups and elections.<br/>
+  <br/>
+  Elections:<br/>
+  {{> electionsAdminList }}<br/>
+  <br/>
+  User Groups:<br/>
+  {{> groupsList }}<br/>
+  <br/>
 </template>
