login button fix

--- a/client/views/elections/electionsList.html
+++ b/client/views/elections/electionsList.html
@@ -1,5 +1,5 @@
 <template name="electionsList">
-  <a id="login" href="#"></a>
+  <a id="login" href="#">Login with NYU</a><br/>
   {{#each electionItems}}
     {{> electionItem}}
   {{/each}}
