publication bug fixes

--- a/client/views/includes/home.html
+++ b/client/views/includes/home.html
@@ -1,3 +1,7 @@
 <template name="home">
+  You have {{ballotCount}} open ballots.
+  <br/>
   {{> electionsList}}
+  <br/>
+  You have {{ballotCount}} open ballots.
 </template>
