--- a/client/views/elections/electionsChoice.html
+++ b/client/views/elections/electionsChoice.html
@@ -1,7 +1,16 @@
 <template name="electionsChoice">
-  Choice: {{name}}<br/>
-  {{#if imageExists}}
-    <img src="{{image}}" alt="{{name}}" /><br/>
-  {{/if}}
-  Description: {{description}}<br/>
+<div class="profilebox col-xs-12 col-sm-6 col-md-4">
+	<div class="profileblur">
+	</div>
+	<div class="choicename">
+	  Choice: {{name}}<br/>
+	 </div>
+	  {{#if imageExists}}
+	    <img class="profilepic" src="{{image}}" alt="{{name}}" /><br/>
+	  {{/if}}
+	 <div class="description">
+	  Description: {{description}}<br/>
+	 </div>
+</div>
+
 </template>
