--- a/client/views/elections/electionsQuestions.html
+++ b/client/views/elections/electionsQuestions.html
@@ -1,8 +1,15 @@
 <template name="electionsQuestions">
-  Question: {{name}}<br/>
-  Question Description: {{description}}<br/>
-  Choices: <br/>
-  {{#each choices}}
-    {{>electionsChoice}}<br/>
-  {{/each}}
+		<div class="questionsbox">
+		 {{name}}<br/>
+		 </div>
+		 <div class="questiondescription">
+		 {{description}}<br/>
+		 </div>
+		<div class="choices row">
+		  {{#each choices}}
+
+		    {{>electionsChoice}}
+
+		  {{/each}}
+		</div>
 </template>
