--- a/client/views/elections/electionsItem.html
+++ b/client/views/elections/electionsItem.html
@@ -1,8 +1,10 @@
 <template name="electionItem">
 
 <div class="eachelection">
-	<div id="header-{{_id}}" class="electiontitle">Election Title:<br>{{name}}</div><br/>
-	<div class = "arrowdown"></div>
+	<div id="headerbanner">
+		<div id="header-{{_id}}" class="electiontitle">Election Title:<br>{{name}}</div><br/>
+		<div class = "arrowdown"></div>
+	</div>
 	<div class="electiondescription"><p>Election Description: {{description}}</p><br/></div>
 	<div class= "electionitem">
 		
