--- a/client/views/includes/home.html
+++ b/client/views/includes/home.html
@@ -1,7 +1,8 @@
 <template name="home">
+<div class="loginsection">
   You have {{ballotCount}} open ballots.
-  <br/>
+    <br/>
+ </div>
   {{> electionsList}}
   <br/>
-  You have {{ballotCount}} open ballots.
 </template>
