added splash page

--- a/client/stylesheets/style.styl
+++ b/client/stylesheets/style.styl
@@ -1,6 +1,6 @@
-<<<<<<< HEAD
 html{
 }
+
 body{
 	font-family: 'Montserrat', sans-serif;
 }
@@ -22,17 +22,6 @@ body{
 	text-align:center;
 	font-size: 1.5em;
 	margin-top: 10px;
-
-}
-#login{
-	height: 50px;
-	width: 200px;
-	height:50px;
-	color: white;
-	background: black;
-	border: none;
-	border-radius: 15px;
-	margin-bottom:10px;
 
 }
 #main{
@@ -175,6 +164,33 @@ h5{
 	position: absolute;
 	width: 100%
 }
+
 .chosen {
   background-color: rgba(82,46,145,0.4);
+}
+
+.splash {
+  position: relative;
+  text-align: center;
+  color: white;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding: 20px
+  button {
+    margin-top: 20px
+    margin-bottom: 20px
+    height: 50px;
+    width: 200px;
+    height:50px;
+    color: white;
+    background: rgb(82,46,145);
+    border: none;
+    border-radius: 15px;
+  }
+}
+
+@media (max-width : 768px){
+  .splash {
+    margin-left: 16.666666%
+  }
 }
