added links on home

--- a/client/views/includes/home.html
+++ b/client/views/includes/home.html
@@ -6,13 +6,13 @@
     </div>
   {{else}}
     <div class="row">
-      <div class="splash col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-4">
+      <div class="splash col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3">
         <div class="profileblur"></div>
         <p>
           Welcome to NYU Vote.
         </p>
         <p>
-          NYU Vote is a flexible, multi-purpose voting system that can be used
+        <a href="/about">NYU Vote</a> is a flexible, multi-purpose voting system that can be used
           for everything from school wide elections to instant polls at
           meetings. 
         </p>
