--- a/client/views/elections/electionsChoice.html
+++ b/client/views/elections/electionsChoice.html
@@ -1,5 +1,5 @@
 <template name="electionsChoice">
-  <div class="choice" data-id="{{_id}}">
+<div class="{{choiceClass}}" data-id="{{_id}}">
     Choice: {{name}}<br/>
     {{#if imageExists}}
       <img src="{{image}}" alt="{{name}}" /><br/>
