--- a/client/stylesheets/style.styl
+++ b/client/stylesheets/style.styl
@@ -194,3 +194,16 @@ h5{
     margin-left: 16.666666%
   }
 }
+
+CSS
+
+.clearfix:after {
+ visibility: hidden;
+ display: block;
+ font-size: 0;
+ content: " ";
+ clear: both;
+ height: 0;
+}
+ 
+.clearfix {display: inline-block;}
