--- a/client/views/elections/electionsChoice.html
+++ b/client/views/elections/electionsChoice.html
@@ -3,13 +3,13 @@
 	<div class="profileblur">
 	</div>
 	<div class="choicename">
-	  Choice: {{name}}<br/>
+	  Choice: {{name}}
 	 </div>
 	  {{#if imageExists}}
 	    <img class="profilepic" src="{{image}}" alt="{{name}}" /><br/>
 	  {{/if}}
 	 <div class="description">
-	  Description: {{description}}<br/>
+	  Description: {{description}}
 	 </div>
 </div>
 </template>
