--- a/client/views/elections/electionsItem.html
+++ b/client/views/elections/electionsItem.html
@@ -9,7 +9,7 @@
 	<div class= "electionitem">
 		
 		{{#each questions}}
-		  {{> electionsQuestions}}<br/>
+		  {{> electionsQuestions}}
 		{{/each}}
 		
 	</div>
