--- a/client/views/elections/electionsQuestions.html
+++ b/client/views/elections/electionsQuestions.html
@@ -11,6 +11,8 @@
 		    {{>electionsChoice}}
 
 		  {{/each}}
-      {{>electionsChoice abstain}}<br/>
+      {{#if options.allowAbstain}}
+        {{>electionsChoice abstain}}
+      {{/if}}
 		</div>
 </template>
