--- a/client/views/elections/electionsAdminModify.html
+++ b/client/views/elections/electionsAdminModify.html
@@ -1,15 +1,4 @@
 <template name="electionsAdminModify">
-  {{#if notModifying}}
-    balblablabl:<br/>
-    Election Name: {{name}}<br/>
-    Questions: <br/>
-    {{#each questions}}
-      Question Name: {{name}}<br/>
-      Choices: <br/>
-      {{#each choices}}
-        {{name}}<br/>
-      {{/each}}
-    {{/each}}
+    TEST</br>
     <a class="submitElection" href="#">Submit this Election</a><br/><br/>
-  {{/if}}
 </template>
