--- a/client/stylesheets/style.styl
+++ b/client/stylesheets/style.styl
@@ -1,12 +1,12 @@
+
 html{
 }
-
 body{
 	font-family: 'Montserrat', sans-serif;
+	min-height:100%;
 }
 
 #header{
-	text-align: center;
 	padding-bottom: 10px;
 	padding-top: 10px;
 	background: black;
@@ -15,13 +15,30 @@ body{
 	min-height: 100%;
 }
 
-.bold{
-	font-weight:700;
+#nyuvote{
+	text-align: left;
+	font-size: 2em;
+	line-height: 1em;
+	margin-left: 20px;
+}
+.smaller{
+	font-size:0.8em;
 }
 .loginsection{
 	text-align:center;
 	font-size: 1.5em;
 	margin-top: 10px;
+
+}
+#login{
+	height: 50px;
+	width: 200px;
+	height:50px;
+	color: white;
+	background: black;
+	border: none;
+	border-radius: 15px;
+	margin-bottom:10px;
 
 }
 #main{
@@ -30,25 +47,13 @@ body{
 	margin-right: auto;
 	margin-left: auto;
 }
-.backgroundimg{
-	
-	position: absolute;
-	z-index: -9999;
-	opacity: 0.25;
-	height: 100%;
-	width: 200px;
-	right: 0;
-	background-image: url("http://2.bp.blogspot.com/-DQQPXyZ-SAk/Tje8yekH9VI/AAAAAAAAAro/AN4kUDLSyF8/s760/NYU_Torch.jpg");
-	background-repeat: repeat-y;
-	-webkit-filter: blur(2px);
-	-moz-filter: blur(2px);
-	-o-filter: blur(2px);
-	-ms-filter: blur(2px);
-	filter: blur(2px);
-}
 
+#headerbanner{
+	margin-top: 20px;
+}
 .choices{
 	color:white;
+	padding: 0px 50px;
 }
 
 .eachelection{
@@ -56,43 +61,62 @@ body{
 }
 .electionitem{
 	width: 100%;
-	padding: 10px 50px 20px 50px;
 	margin-left: auto;
 	margin-right: auto;
 }
+#electionitem{
+	text-align:right;
+}
 
 .electiontitle{
+	text-align: center;
+	font-size: 1.5em;
+	background: black;
+	color:white;
+	padding: 10px 10px 20px 10px;
+}
+
+
+.questiontitle{
 	background: rgb(82,46,145);
 	color: white;
-	font-size: 2em;
 	padding: 10px 10px 20px 10px;
 	text-align:center;
 }
-.arrowdown{
+.arrowdownblack{
 	border-left: 30px solid transparent;
 	border-right: 30px solid transparent;
 	width:0;
 	border-top: 20px solid rgb(82,46,145);
 	position: relative;
-	margin-top: -20px;
+	margin-top: -40px;
+	margin-right: auto;
+	margin-left: auto;
+	top: 40px;
+}
+.arrowdownpurple{
+	border-left: 30px solid transparent;
+	border-right: 30px solid transparent;
+	width:0;
+	border-top: 20px solid black;
+	position: relative;
 	margin-right: auto;
 	margin-left: auto;
 }
-
-.electiondescription p{
-	font-size:1.2em;
+.questiondescription{
+	margin-top: 60px;
 	text-align: center;
-	padding: 0px 50px;
-	margin-top: 20px;
+	font-size: 1.2em;
 }
-
 .questionsbox{
 	font-size:1.8em;
 	text-align: center;
 }
-.questiondescription{
-	font-size:1.2em;
-	text-align:center;
+.electiondescription{
+	font-size: 1.2em;
+	text-align: center;
+	padding: 20px 50px;
+	background:white;
 }
 
 .choicename{
@@ -100,8 +124,12 @@ body{
 	margin-bottom:15px;
 }
 .profilepic{
-	width: 100%;
-	position: relative;
+	width: 300px;
+	height: 300px;
+	border-radius: 150px;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -112,6 +140,9 @@ body{
 	text-align: center;
 	margin-top: 30px;
 	padding: 50px 50px;
+	height: 100%;
+	border: 2px solid white;
+
 }
 .profileblur{
 	height: 100%;
@@ -145,6 +176,8 @@ h5{
 .buttons{
 	margin-bottom:20px;
 	text-align:center;
+	margin-top: 30px;
+
 }
 .submit{
 	height: 50px;
@@ -158,39 +191,29 @@ h5{
 }
 
 #footer{
-	background: black;
-	color: white;
+	background: #000;
+	color: #fff;
 	text-align: center;
 	position: absolute;
-	width: 100%
+	width: 100%;
+	height: 100px;
+	padding-top: 20px;
+}
+
+.ballots{
+	text-align: center;
+	font-size: 1.8em;
+	line-height: 2.3em;
+	background:rgb(82,46,145);
+	color:white;
 }
 
 .chosen {
   background-color: rgba(82,46,145,0.4);
 }
 
-.splash {
-  position: relative;
-  text-align: center;
-  color: white;
-  margin-top: 50px;
-  margin-bottom: 50px;
-  padding: 20px
-  button {
-    margin-top: 20px
-    margin-bottom: 20px
-    height: 50px;
-    width: 200px;
-    height:50px;
-    color: white;
-    background: rgb(82,46,145);
-    border: none;
-    border-radius: 15px;
-  }
-}
-
-@media (max-width : 768px){
-  .splash {
-    margin-left: 16.666666%
-  }
+@media screen and (max-width:786px){
+	.profilebox{
+		height: auto;
+	}
 }
