--- a/client/views/elections/electionsItem.html
+++ b/client/views/elections/electionsItem.html
@@ -13,9 +13,7 @@
 		{{/each}}
 		
 	</div>
-	<div class="buttons">
-		 	<button type ="button" class="submit"> Vote </button>
-	</div>
+  <button type ="button" class="submit vote"> Vote </button>
 	
 </div>
 
