--- a/client/stylesheets/style.styl
+++ b/client/stylesheets/style.styl
@@ -189,21 +189,13 @@ h5{
   }
 }
 
+.vote {
+  display: block;
+  margin: 0 auto;
+}
+
 @media (max-width : 768px){
   .splash {
     margin-left: 16.666666%
   }
 }
-
-CSS
-
-.clearfix:after {
- visibility: hidden;
- display: block;
- font-size: 0;
- content: " ";
- clear: both;
- height: 0;
-}
- 
-.clearfix {display: inline-block;}
