finished html of admin panel

--- a/client/views/elections/electionsAdminList.html
+++ b/client/views/elections/electionsAdminList.html
@@ -2,32 +2,38 @@
   {{#each elections}}
     {{#if notModifying}}
       <table border="1">
-      <tr>
-        <td><button class="openCloseElection" href="#">{{openCloseElection}} Election</button></td>
-        <td><button class="deleteElection" href="#">Delete Election</button></td>
-      </tr>
-      <tr><td>{{name}}</td></tr>
-      <tr><td>{{description}}</td></tr>
-      <tr><td>Creator: {{creator}}</td></tr>
-      <tr><td>Groups: </td></tr>
-      {{#each findGroups}}
-        <tr><td>{{name}}</td></tr>
-      {{/each}}
-      <tr><td>Questions: </td></tr>
-      {{#each questions}}
-        <tr><td>{{name}}</td></tr>
-        <tr><td>{{description}}</td></tr>
-        <tr>
-          <td>{{allowAbstain}} Abstention</td>
-          <td>{{multi}} Choice</td>
-        </tr>
-        <tr><td>Choices: </td></tr>
-        {{#each choices}}
+        <form>
+          <tr>
+            <td><button class="openCloseElection" href="#">{{openCloseElection}} Election</button></td>
+            <td><button class="deleteElection" href="#">Delete Election</button></td>
+          </tr>
           <tr><td>{{name}}</td></tr>
           <tr><td>{{description}}</td></tr>
-          <tr><td>Image URL: {{image}}</td></tr>
-        {{/each}}
-      {{/each}}
+          <tr><td>Creator: {{creator}}</td></tr>
+          <tr><td>Groups: </td></tr>
+          <tr><td>
+          <select multiple="multiple">
+          {{#each groups}}
+            <option>{{name}}</option>
+          {{/each}}
+          </select>
+          </td></tr>
+          <tr><td>Questions: </td></tr>
+          {{#each questions}}
+            <tr><td>*</td><td>{{name}}</td></tr>
+            <tr><td>*</td><td>{{description}}</td></tr>
+            <tr>
+              <td></td><td>{{allowAbstain}} Abstention</td>
+              <td>{{multi}} Choice</td>
+            </tr>
+            <tr><td>*</td><td>Choices: </td></tr>
+            {{#each choices}}
+              <tr><td>*</td><td>*</td><td>{{name}}</td></tr>
+              <tr><td>*</td><td>*</td><td>{{description}}</td></tr>
+              <tr><td>*</td><td>*</td><td>Image URL: {{image}}</td></tr>
+            {{/each}}
+          {{/each}}
+        </form>
       </table>
       <button class="modifyElection" href="#" >Edit this Election</button><br/><br/>
     {{else}}
