--- a/client/views/groups/groupsItem.html
+++ b/client/views/groups/groupsItem.html
@@ -1,5 +1,5 @@
 <template name="groupsItem">
-  Name: {{name}}<br/>
-  Admins: {{admins}}<br />
-  Users: {{usersCount}} <br/>
+  <tr><td></td><td>Name: {{name}}</td></tr>
+  <tr><td></td><td>Admins: {{admins}}</td></tr>
+  <tr><td></td><td>Users: {{usersCount}}</td></tr>
 </template>
