--- a/client/views/elections/electionsAdminModify.html
+++ b/client/views/elections/electionsAdminModify.html
@@ -8,7 +8,7 @@
       <tr><td>
       <select multiple="multiple">
       {{#each groups}}
-        <option>{{name}}</option>
+        <option value={{_id}}>{{name}}</option>
       {{/each}}
       </select>
       </td></tr>
