logout flow perfect

--- a/client/views/elections/electionsChoice.html
+++ b/client/views/elections/electionsChoice.html
@@ -1,5 +1,5 @@
 <template name="electionsChoice">
-<div class="{{choiceClass}} profilebox col-xs-12 col-sm-6 col-md-4" data-id="{{_id}}">
+<div class="{{choiceClass}} profilebox col-xs-12 col-sm-6 col-lg-4" data-id="{{_id}}">
 	<div class="profileblur">
 	</div>
 	<div class="choicename">
