--- a/client/stylesheets/style.styl
+++ b/client/stylesheets/style.styl
@@ -2,7 +2,6 @@ html{
 }
 body{
 	font-family: 'Montserrat', sans-serif;
-	min-height:100%;
   overflow-x: hidden;
 }
 
@@ -30,17 +29,19 @@ body{
 	margin-top: 10px;
 
 }
-#login{
+.account{
 	height: 50px;
 	width: 200px;
 	height:50px;
 	color: white;
-	background: black;
+	background: rgb(82,46,145);
 	border: none;
 	border-radius: 15px;
+  margin: 0 auto;
 	margin-bottom:10px;
-
+  display: block;
 }
+
 #main{
 	position: relative;
 	color:black;
@@ -141,6 +142,9 @@ body{
 	padding: 50px 50px;
 	height: 100%;
 	border: 2px solid white;
+  &:hover {
+    cursor: pointer
+  }
 
 }
 .profileblur{
@@ -181,7 +185,7 @@ h5{
 .submit{
 	height: 50px;
 	font-size: 1.5em;
-	width: 200px;
+	width: 300px;
 	height:50px;
 	color: white;
 	background: black;
@@ -195,8 +199,13 @@ h5{
 	text-align: center;
 	position: absolute;
 	width: 100%;
-	height: 100px;
-	padding-top: 20px;
+	height: 80px;
+	padding-top: 10px;
+  p {
+    padding-top: 2px;
+    padding-bottom: 2px;
+    font-weight: 300;
+  }
 }
 
 .ballots{
@@ -250,4 +259,20 @@ h5{
   .splash {
     margin-left: 16.666666%
   }
+}
+.splash {
+  p {
+    margin: 10px 0px;
+    font-weight: 300;
+
+  }
+}
+
+small {
+  font-size: 0.9em;
+  }
+
+#logout {
+  margin-top: 30px;
+  width: 300px;
 }
