finished group editing admin

--- a/client/views/elections/electionsAdminModify.html
+++ b/client/views/elections/electionsAdminModify.html
@@ -1,5 +1,5 @@
 <template name="electionsAdminModify">
-  <table border="1">
+  <table border="1" class="table table-striped table-bordered table-hover table-condensed">
     <form>
       <tr><td><input class="election name" type="text" placeholder="{{name}}"></td></tr>
       <tr><td><input class="election description" type="text" placeholder="{{description}}"></td></tr>
@@ -46,5 +46,5 @@
       </tr>
     </form>
   </table>
-  <a class="submitElection" href="#">Submit this Election</a><br/><br/>
+  <button class="submitElection btn btn-primary" href="#">Submit this Election</button><br/><br/>
 </template>
