--- a/client/views/elections/electionsAdminList.html
+++ b/client/views/elections/electionsAdminList.html
@@ -1,11 +1,11 @@
 <template name="electionsAdminList">
   {{#each elections}}
     {{#if notModifying}}
-      <table border="1">
+      <table border="1" class="table table-striped table-bordered table-hover table-condensed">
         <form>
           <tr>
-            <td><button class="openCloseElection" href="#">{{openCloseElection}} Election</button></td>
-            <td><button class="deleteElection" href="#">Delete Election</button></td>
+            <td><button class="openCloseElection btn btn-primary" href="#">{{openCloseElection}} Election</button></td>
+            <td><button class="deleteElection btn btn-primary" href="#">Delete Election</button></td>
           </tr>
           <tr><td>{{name}}</td></tr>
           <tr><td>{{description}}</td></tr>
@@ -35,7 +35,7 @@
           {{/each}}
         </form>
       </table>
-      <button class="modifyElection" href="#" >Edit this Election</button><br/><br/>
+      <button class="modifyElection btn btn-primary" href="#" >Edit this Election</button><br/><br/>
     {{else}}
       {{>electionsAdminModify}}
     {{/if}}
