--- a/client/views/groups/groupsList.html
+++ b/client/views/groups/groupsList.html
@@ -1,10 +1,10 @@
 <template name="groupsList">
   Groups: </br>
-  <table border="1">
+  <table border="1" class="table table-striped table-bordered table-hover table-condensed">
   {{#each groups}}
     <tr>
       <td>Group Item: </td>
-      <td><button class="modifyGroup" href="#">Modify group</button></td>
+      <td><button class="modifyGroup btn btn-primary" href="#">Modify group</button></td>
     </tr>
     {{#if notModifying}}
       {{> groupsItem}}
@@ -13,9 +13,9 @@
     {{/if}}
   {{/each}}
   </table>
-  <button class="createGroup" href="#">Create group</button>
+  <button class="createGroup btn btn-primary" href="#">Create group</button>
   {{#if creating}}
-    <table border="1">
+    <table border="1" class="table table-striped table-bordered table-hover table-condensed">
     {{> groupsCreate}}
     </table>
   {{/if}}
