--- a/client/views/elections/electionsAdminModify.html
+++ b/client/views/elections/electionsAdminModify.html
@@ -6,7 +6,7 @@
       <tr><td>Creator: {{creator}}</td></tr>
       <tr><td>Groups: </td></tr>
       <tr><td>
-      <select multiple="multiple">
+      <select class="election groups"multiple="multiple">
       {{#each groups}}
         <option value={{_id}}>{{name}}</option>
       {{/each}}
