--- a/client/stylesheets/style.styl
+++ b/client/stylesheets/style.styl
@@ -276,3 +276,18 @@ small {
   margin-top: 30px;
   width: 300px;
 }
+
+.bigLoad {
+  text-align: center
+  h1 {
+    color: #522E91
+    font-size: 2.5em
+    margin-bottom: 20px
+    margin-top: 20px
+  }
+  img {
+    height: 100px
+    margin: 0 auto;
+    display: block
+  }
+}
