--- a/client/views/elections/electionsAdminModify.html
+++ b/client/views/elections/electionsAdminModify.html
@@ -1,30 +1,31 @@
 <template name="electionsAdminModify">
-  <table border="1" class="table table-striped table-bordered table-hover table-condensed">
-    <form>
-      <tr><td><input class="election name" type="text" placeholder="{{name}}" value="{{name}}"></td></tr>
-      <tr><td><input class="election description" type="text" placeholder="{{description}}" value="{{description}}"></td></tr>
+  <form class="election-form">
+    <input type="hidden" name="_id" value="{{_id}}">
+    <table border="1" class="table table-striped table-bordered table-hover table-condensed">
+      <tr><td><input name="name" class="election name" type="text" placeholder="{{name}}" value="{{name}}"></td></tr>
+      <tr><td><input name="description" class="election description" type="text" placeholder="{{description}}" value="{{description}}"></td></tr>
       <tr><td>Creator: {{creator}}</td></tr>
       <tr><td>Groups: </td></tr>
       <tr><td>
-      <select class="election groups"multiple="multiple">
+      <select class="election groups" multiple="multiple">
       {{#each groups}}
-        <option value={{_id}}>{{name}}</option>
+        <option value="{{_id}}">{{name}}</option>
       {{/each}}
       </select>
       </td></tr>
       <tr><td>Questions: </td></tr>
       {{#each questions}}
-        <tr><td></td><td><input class="question name" type="text" placeholder="{{name}}" value="{{name}}"></td></tr>
-        <tr><td></td><td><input class="question description" type="text" placeholder="{{description}}" value="{{description}}"></td></tr>
+        <tr><td></td><td><input name="questionName" class="question name" type="text" placeholder="{{name}}" value="{{name}}"></td></tr>
+        <tr><td></td><td><input name="questionDescription" class="question description" type="text" placeholder="{{description}}" value="{{description}}"></td></tr>
         <tr>
-          <td></td><td>Allow Abstention<input class="question allowAbstain" type="checkbox" checked="{{allowAbstain}}"></td>
-          <td>Multiple Choice<input class="question multi" type="checkbox" checked="{{multi}}"></td>
+          <td></td><td>Allow Abstention<input name="questionAllowAbstain" class="question allowAbstain" type="checkbox" {{allowAbstain}}></td>
+          <td>Multiple Choice<input name="questionMulti" class="question multi" type="checkbox" {{multi}}></td>
         </tr>
         <tr><td></td><td>Choices: </td></tr>
         {{#each choices}}
-          <tr><td></td><td></td><td><input class="choice name" type="text" placeholder="{{name}}" value="{{name}}"></td></tr>
-          <tr><td></td><td></td><td><input class="choice description" type="text" placeholder="{{description}}" value="{{description}}"></td></tr>
-          <tr><td></td><td></td><td>Image URL: <input class="choice image" type="text" placeholder="{{image}}" value="{{image}}"></td></tr>
+          <tr><td></td><td></td><td><input name="choiceName" class="choice name" type="text" placeholder="{{name}}" value="{{name}}"></td></tr>
+          <tr><td></td><td></td><td><input name="choiceDescription" class="choice description" type="text" placeholder="{{description}}" value="{{description}}"></td></tr>
+          <tr><td></td><td></td><td>Image URL: <input name="choiceImage" class="choice image" type="text" placeholder="{{image}}" value="{{image}}"></td></tr>
         {{/each}}
         <tr>
           <td></td><td>New Choice: </td>
@@ -36,7 +37,7 @@
       {{/each}}
       <tr>
         <td>New Question: </td>
-        <td><a class="submitQuestion" href="#">Add Question</a></td>
+        <td><button class="submitQuestion btn btn-primary" href="#">Add Question</button><br/><br/></td>
       </tr>
       <tr><td></td><td><input class="new question name" type="text" placeholder="Question Name" value="Question Name"></td></tr>
       <tr><td></td><td><input class="new question description" type="text" placeholder="Question Description" value="Question Description"></td></tr>
@@ -44,7 +45,7 @@
         <td></td><td>Allow Abstention<input class="new question allowAbstain" type="checkbox" value="allowAbstain"></td>
         <td>Multiple Choice<input class="new question multi" type="checkbox" value="multi"></td>
       </tr>
-    </form>
-  </table>
+    </table>
+  </form>
   <button class="submitElection btn btn-primary" href="#">Submit this Election</button><br/><br/>
 </template>
