--- a/client/stylesheets/style.styl
+++ b/client/stylesheets/style.styl
@@ -291,3 +291,15 @@ small {
     display: block
   }
 }
+
+.about {
+  text-align: left;
+}
+
+#header {
+    a {
+        color: white !important
+        text-decoration: none
+    }
+
+  }
