--- a/client/views/includes/footer.html
+++ b/client/views/includes/footer.html
@@ -2,7 +2,7 @@
 	<div id="footer">
     <p>
     <small>
-      Sponsored by Student Senator Council
+      Sponsored by Student Senators Council
     </small>
     </p>
     <p>
@@ -12,7 +12,7 @@
     </p>
     <p>
     <small>
-      <a href="#">More About This Project </a> | 
+      <a href="/about">More About This Project </a> | 
       {{#if loggedIn}}
         <a id="logoutFoot" href="#">Logout</a>
       {{/if}}
