--- a/client/views/elections/electionsAdminList.html
+++ b/client/views/elections/electionsAdminList.html
@@ -9,6 +9,7 @@
         <tr><td>{{name}}</td></tr>
         <tr><td>{{description}}</td></tr>
         <tr><td>Creator: {{creator}}</td></tr>
+        <tr><td>Total Votes: {{voteCountTotal}}</td></tr>
         <tr><td>Groups: </td></tr>
         <tr><td>
         <select multiple="multiple">
@@ -21,6 +22,7 @@
         {{#each questions}}
           <tr><td></td><td>{{name}}</td></tr>
           <tr><td></td><td>{{description}}</td></tr>
+          <tr><td></td><td>Question Votes: {{voteCountQuestion}}</td></tr>
           <tr>
             <td></td><td>{{allowAbstain}} Abstention</td>
             <td>{{multi}} Choice</td>
@@ -30,6 +32,7 @@
             <tr><td></td><td></td><td>{{name}}</td></tr>
             <tr><td></td><td></td><td>{{description}}</td></tr>
             <tr><td></td><td></td><td>Image URL: {{image}}</td></tr>
+            <tr><td></td><td></td><td>Choice Votes: {{voteCountChoice}}</td></tr>
           {{/each}}
         {{/each}}
       </table>
