added black and white filters

--- a/client/stylesheets/style.styl
+++ b/client/stylesheets/style.styl
@@ -2,7 +2,6 @@ html{
 }
 body{
 	font-family: 'Montserrat', sans-serif;
-  overflow-x: hidden;
 }
 
 #header{
@@ -302,4 +301,19 @@ small {
         text-decoration: none
     }
 
+  }
+.row {
+  margin-left: 0px
+  margin-right: 0px
+}
+
+.choice, .abstain {
+    filter: url(filters.svg#grayscale); /* Firefox 3.5+ */
+    filter: gray; /* IE6-9 */
+    -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
+}
+
+.chosen {
+  filter: none;
+  -webkit-filter: none;
   }
