--- a/client/views/groups/groupsCreate.html
+++ b/client/views/groups/groupsCreate.html
@@ -3,5 +3,5 @@
     <tr><td></td><td>Description: <input class="new group description" type="text" placeholder="Group Description"></td></tr>
     <tr><td></td><td>Admins: <textarea rows="5" class="new group admins">netId&#10;netId&#10;netId</textarea></td></tr>
     <tr><td></td><td>NetIds: <textarea rows="20" class="new group netids">netId&#10;netId&#10;netId</textarea></td></tr>
-    <tr><td></td><td><button class="new submitGroup btn btn-primary" href="#">Submit group</button></td></tr>
+    <tr><td></td><td><button class="new submitGroup btn btn-block btn-success" href="#">Create group</button></td></tr>
 </template>
