--- a/client/views/elections/electionsAdminModify.html
+++ b/client/views/elections/electionsAdminModify.html
@@ -1,51 +1,66 @@
 <template name="electionsAdminModify">
-  <form class="election-form">
+  <form class="election-form form-horizontal">
     <input type="hidden" name="_id" value="{{_id}}">
-    <table border="1" class="table table-striped table-bordered table-hover table-condensed">
-      <tr><td><input name="name" class="election name" type="text" placeholder="{{name}}" value="{{name}}"></td></tr>
-      <tr><td><input name="description" class="election description" type="text" placeholder="{{description}}" value="{{description}}"></td></tr>
-      <tr><td>Creator: {{creator}}</td></tr>
-      <tr><td>Groups: </td></tr>
-      <tr><td>
-      <select class="election groups" multiple="multiple">
-      {{#each groups}}
-        <option value="{{_id}}">{{name}}</option>
-      {{/each}}
-      </select>
-      </td></tr>
-      <tr><td>Questions: </td></tr>
-      {{#each questions}}
-        <tr><td></td><td><input name="questionName" class="question name" type="text" placeholder="{{name}}" value="{{name}}"></td></tr>
-        <tr><td></td><td><input name="questionDescription" class="question description" type="text" placeholder="{{description}}" value="{{description}}"></td></tr>
+    <div class="table-responsive">
+      <table border="1" class="table table-striped table-bordered table-hover table-condensed">
         <tr>
-          <td></td><td>Allow Abstention<input name="questionAllowAbstain" class="question allowAbstain" type="checkbox" {{allowAbstain}}></td>
-          <td>Multiple Choice<input name="questionMulti" class="question multi" type="checkbox" {{multi}}></td>
+          <td><button class="submitElection btn btn-success btn-block" href="#">Save Election</button></td>
+          <td><button class="cancelSubmitElection btn btn-warning btn-block" href="#">Cancel Modify</button></td>
+          <td><button class="deleteElection btn btn-danger btn-block" href="#">Delete Election</button></td>
         </tr>
-        <tr><td></td><td>Choices: </td></tr>
-        {{#each choices}}
-          <tr><td></td><td></td><td><input name="choiceName" class="choice name" type="text" placeholder="{{name}}" value="{{name}}"></td></tr>
-          <tr><td></td><td></td><td><input name="choiceDescription" class="choice description" type="text" placeholder="{{description}}" value="{{description}}"></td></tr>
-          <tr><td></td><td></td><td>Image URL: <input name="choiceImage" class="choice image" type="text" placeholder="{{image}}" value="{{image}}"></td></tr>
+        <tr><td><label class="text-muted" for="election-name">Name: </label><input id="election-name" name="name" class="form-control election name" type="text" placeholder="{{name}}" value="{{name}}"></td></tr>
+        <tr><td><label class="text-muted" for="election-description">Description:</label><input id="election-description" name="description" class="form-control election description" type="text" placeholder="{{description}}" value="{{description}}"></td></tr>
+        <tr><td>Creator: {{creator}}</td></tr>
+        <tr><td>Groups: </td></tr>
+        <tr><td>
+        {{#each groups}}
+        <input name="group" class="election group" type="checkbox" value="{{_id}}"{{hasGroup _id ../groups }}>{{name}}</br>
         {{/each}}
-        <tr>
-          <td></td><td>New Choice: </td>
-          <td><a class="submitChoice" href="#">Add Choice</a></td>
+        </td></tr>
+        <tr><td>Questions: </td></tr>
+        {{#each questions}}
+        <tr class="success"><td></td><td><label class="text-muted" for="question-{{_id}}-name">Name:</label><input id="question-{{_id}}-name" name="questionName" class="form-control question name" type="text" placeholder="{{name}}" value="{{name}}"></td></tr>
+        <tr><td></td><td><label class="text-muted" for="question-{{_id}}-description">Description:</label><input id="question-{{_id}}-description" name="questionDescription" class="form-control question description" type="text" placeholder="{{description}}" value="{{description}}"></td></tr>
+          <tr>
+            <td></td><td><input id="allow-abstain" name="questionAllowAbstain" class="question allowAbstain" type="checkbox" {{allowAbstain}}><label for="allow-abstain">Allow Abstention</label></td>
+          </tr>
+          <tr>
+            <td></td><td><input id="multi" name="questionMulti" class="question multi" type="checkbox" {{multi}}><label for="multi">Multiple Choice</label></td>
+          </tr>
+          <tr><td></td><td>Choices: </td></tr>
+          {{#each choices}}
+            <tr class="warning"><td></td><td></td><td><label class="text-muted" for="choice-{{_id}}-name">Name:</label><input id="choice-{{_id}}-name"  name="choiceName" class="form-control choice name" type="text" placeholder="{{name}}" value="{{name}}"></td></tr>
+            <tr><td></td><td></td><td><label class="text-muted" for="choice-{{_id}}-description">Description::</label><input id="choice-{{_id}}-description" name="choiceDescription" class="form-control choice description" type="text" placeholder="{{description}}" value="{{description}}"></td></tr>
+            <tr><td></td><td></td><td><label class="text-muted" for="choice-{{_id}}-url">Image url:</label><input id="choice-{{_id}}-url" name="choiceImage" class="form-control choice image" type="text" placeholder="{{image}}" value="{{image}}"></td></tr>
+          {{/each}}
+          <tr class="warning">
+            <td></td><td><h6>New Choice</h6></td>
+            <td></td>
+          </tr>
+          <tr><td></td><td></td><td><input class="form-control new choice name" type="text" placeholder="Choice Name"></td></tr>
+          <tr><td></td><td></td><td><input class="form-control new choice description" type="text" placeholder="Choice Description"></td></tr>
+          <tr><td></td><td></td><td><input class="form-control new choice image" type="text" placeholder="Choice Image URL"></td></tr>
+          <tr><td></td><td></td><td><a class="submitChoice btn btn-success btn-block" href="#">Add Choice</a></td></tr>
+        {{/each}}
+        <tr class="success">
+          <td><h6>New Question</h6></td>
+          <td></td>
         </tr>
-        <tr><td></td><td></td><td><input class="new choice name" type="text" placeholder="Choice Name" value="Choice Name"></td></tr>
-        <tr><td></td><td></td><td><input class="new choice description" type="text" placeholder="Choice Description" value="Choice Description"></td></tr>
-        <tr><td></td><td></td><td>Image URL: <input class="new choice image" type="text" placeholder="Choice Image URL" value="Choice Image URL"></td></tr>
-      {{/each}}
-      <tr>
-        <td>New Question: </td>
-        <td><button class="submitQuestion btn btn-primary" href="#">Add Question</button><br/><br/></td>
-      </tr>
-      <tr><td></td><td><input class="new question name" type="text" placeholder="Question Name" value="Question Name"></td></tr>
-      <tr><td></td><td><input class="new question description" type="text" placeholder="Question Description" value="Question Description"></td></tr>
-      <tr>
-        <td></td><td>Allow Abstention<input class="new question allowAbstain" type="checkbox" value="allowAbstain"></td>
-        <td>Multiple Choice<input class="new question multi" type="checkbox" value="multi"></td>
-      </tr>
-    </table>
+        <tr><td></td><td><input class="form-control new question name" type="text" placeholder="Question Name"></td></tr>
+        <tr><td></td><td><input class="form-control new question description" type="text" placeholder="Question Description"></td></tr>
+        <tr>
+          <td></td><td><input id="new-question-abstain" class="new question allowAbstain" type="checkbox" value="allowAbstain"><label for="new-question-abstain">Allow Abstention</label></td>
+        </tr>
+        <tr>
+          <td></td><td><input id="new-question-multi" class="new question multi" type="checkbox" value="multi"><label for="new-question-multi">Multiple Choice</label></td>
+        </tr>
+        <tr><td></td><td><a class="submitQuestion btn btn-success btn-block" href="#">Add Question</a><br/><br/></td></tr>
+        <tr>
+          <td><button class="submitElection btn btn-success btn-block" href="#">Save Election</button></td>
+          <td><button class="cancelSubmitElection btn btn-warning btn-block" href="#">Cancel Modify</button></td>
+          <td><button class="deleteElection btn btn-danger btn-block" href="#">Delete Election</button></td>
+        </tr>
+      </table>
+    </div>
   </form>
-  <button class="submitElection btn btn-primary" href="#">Submit this Election</button><br/><br/>
 </template>
