--- a/client/views/groups/groupsList.html
+++ b/client/views/groups/groupsList.html
@@ -2,21 +2,30 @@
   Groups: </br>
   <table border="1" class="table table-striped table-bordered table-hover table-condensed">
   {{#each groups}}
+    {{#if notModifying}}
     <tr>
       <td>Group Item: </td>
-      <td><button class="modifyGroup btn btn-primary" href="#">Modify group</button></td>
+      <td><button class="modifyGroup btn btn-block btn-primary" href="#">Modify group</button></td>
+      <td><button class="deleteGroup btn btn-block btn-danger" href="#">Delete group</button></td>
     </tr>
-    {{#if notModifying}}
       {{> groupsItem}}
     {{else}}
+    <tr>
+      <td>Group Item: </td>
+      <td><button class="cancelModifyGroup btn btn-block btn-primary" href="#">Cancel Modification</button></td>
+      <td><button class="deleteGroup btn btn-block btn-danger" href="#">Delete group</button></td>
+    </tr>
       {{> groupsModify}}
     {{/if}}
   {{/each}}
   </table>
-  <button class="createGroup btn btn-primary" href="#">Create group</button>
   {{#if creating}}
+  <div class="table-responsive">
     <table border="1" class="table table-striped table-bordered table-hover table-condensed">
     {{> groupsCreate}}
     </table>
+  </div>
+  {{else}}
+  <button class="createGroup btn btn-block btn-success" href="#">Create group</button>
   {{/if}}
 </template>
