--- a/client/views/groups/groupsModify.html
+++ b/client/views/groups/groupsModify.html
@@ -3,5 +3,5 @@
     <tr><td></td><td>Description: <input class="group description" type="text" placeholder="{{description}}" value="{{description}}"></td></tr>
     <tr><td></td><td>Admins: <textarea rows="5" class="group admins">{{admins}}</textarea></td></tr>
     <tr><td></td><td>NetIds: <textarea rows="20" class="group netids">{{netIds}}</textarea></td></tr>
-    <tr><td></td><td><button class="submitGroup btn btn-primary" href="#">Submit group</button></td></tr>
+    <tr><td></td><td><button class="submitGroup btn btn-block btn-success" href="#">Save Group</button></td></tr>
 </template>
