--- a/client/views/elections/electionsQuestions.html
+++ b/client/views/elections/electionsQuestions.html
@@ -19,7 +19,7 @@
       {{description}}
     </p>
 	</div>
-  <div class="choices row abstain-{{options.allowAbstain}}" data-multi="{{options.multi}}">
+  <div class="choices row abstain-{{options.allowAbstain}}" data-multi="{{options.multi}}" chosen-number="0">
 		  {{#each choices}}
 
 		    {{>electionsChoice}}
