--- a/client/views/elections/electionsQuestions.html
+++ b/client/views/elections/electionsQuestions.html
@@ -12,7 +12,7 @@
 	<div class="questiondescription text-muted"> 
     {{#if required}}
     <p>
-      This question is requied
+      This question is required
     </p>
     {{/if}}
     <p>
